--- a/style.css
+++ b/style.css
@@ -1,4 +1,91 @@
-h1{
-    color: orange;
-    background-color: rgb(4, 84, 84);
-} 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    scroll-padding-top: 2rem;
+    scroll-behavior: smooth;
+}
+
+:root{
+    --text-color: #021f2a;
+    --bf-color: #fff;
+}
+html::-webkit-scrollbar{
+    width: 0.5rem;
+}
+    html::-webkit-scrollbar-thumb{
+        background: transparent;
+}
+
+html::-webkit-scrollbar-track{
+    background: var(--text-color);
+    border-radius: 5rem;
+}
+
+section{
+    padding: 5Bpx leep ;
+}
+
+header{
+    position: fixed;
+    width: 100%;
+    top:0;
+    right:0;
+    z-index:1000;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding: 20px 100px;
+    transition: 0.5s;
+    background: turquoise;
+}
+
+.logo{
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--bg-color);
+}
+
+.navbar{
+    display: flex;
+    column-gap: 5rem;
+}
+
+.navbar li{
+    position: relative;
+}
+
+.navbar a{
+    font-size: Irem;
+    font-weight: see;
+    color: var(--bg-color);
+}
+
+.navbar a::after{
+    content:"";
+    width: 100%;
+    height: 2px;
+    background: var(--bg-color);
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    transition: 0.4s;
+}
+
+
+
+.navbar a:hover::after,
+.navbar.home-active::after{
+    width: 100%;
+}
+
+#menu-icon{
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 100001;
+}
+
