--- a/style.css
+++ b/style.css
@@ -87,5 +87,20 @@ header{
     font-size: 24px;
     cursor: pointer;
     z-index: 100001;
-}
+    display: none;
 
+}
+.container {
+    width: 100%;
+    min-height: 840px;
+    position: relative;
+    display: flex;
+    align-items: center
+}
+.container img {
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
